--- a/ml-project-1-data-preprocessing/python/data_preprocessing_template.ipynb
+++ b/ml-project-1-data-preprocessing/python/data_preprocessing_template.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -30,6 +30,7 @@
    },
    "outputs": [],
    "source": [
+    "#ensure .venv is active\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -55,7 +56,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('Data.csv')\n",
+    "dataset = pd.read_csv('../Data.csv')\n",
     "X = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -96,6 +97,18 @@
   "kernelspec": {
    "display_name": "Python 3",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
