--- a/ml-project-9-regression-model-selection/ros-rms.ipynb
+++ b/ml-project-9-regression-model-selection/ros-rms.ipynb
@@ -28,8 +28,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
+    "#feature scaling\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "#ML models\n",
-    "from sklearn.tree import DecisionTreeRegressor"
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR"
    ]
   },
   {
@@ -41,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +61,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Transform the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr_y = y.reshape(len(y),1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Split Data into Training & Test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "#use transformed y for support vector regression\n",
+    "svr_X_train, svr_X_test, svr_y_train, svr_y_test = train_test_split(X, svr_y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Scale the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr_sc_X = StandardScaler()\n",
+    "svr_sc_y = StandardScaler()\n",
+    "svr_X_train = svr_sc_X.fit_transform(svr_X_train)\n",
+    "svr_y_train = svr_sc_y.fit_transform(svr_y_train)"
    ]
   },
   {
@@ -82,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +136,7 @@
        "DecisionTreeRegressor(random_state=0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,36 +173,9 @@
     }
    ],
    "source": [
-    "y_pred = dt_regressor.predict(X_test)\n",
+    "dt_y_pred = dt_regressor.predict(X_test)\n",
     "np.set_printoptions(precision=2)\n",
-    "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Evaluate DT Model Performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.922905874177941"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r2_score(y_test, y_pred)"
+    "print(np.concatenate((dt_y_pred.reshape(len(dt_y_pred),1), y_test.reshape(len(y_test),1)),1))"
    ]
   },
   {
@@ -170,7 +188,285 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Train MLR Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlr_regressor = LinearRegression()\n",
+    "mlr_regressor.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict test result using MLR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[431.43 431.23]\n",
+      " [458.56 460.01]\n",
+      " [462.75 461.14]\n",
+      " ...\n",
+      " [469.52 473.26]\n",
+      " [442.42 438.  ]\n",
+      " [461.88 463.28]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlr_y_pred = mlr_regressor.predict(X_test)\n",
+    "np.set_printoptions(precision=2)\n",
+    "print(np.concatenate((mlr_y_pred.reshape(len(mlr_y_pred),1), y_test.reshape(len(y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Polynomial Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train PR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poly_reg = PolynomialFeatures(degree = 4)\n",
+    "X_poly = poly_reg.fit_transform(X_train)\n",
+    "pr_regressor = LinearRegression()\n",
+    "pr_regressor.fit(X_poly, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict test result using PR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_y_pred = pr_regressor.predict(poly_reg.transform(X_test))\n",
+    "np.set_printoptions(precision=2)\n",
+    "print(np.concatenate((pr_y_pred.reshape(len(pr_y_pred),1), y_test.reshape(len(y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Regession"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train RFR Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "rfr_regressor = RandomForestRegressor(n_estimators = 10, random_state = 0)\n",
+    "rfr_regressor.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict test result using RFR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr_y_pred = rfr_regressor.predict(X_test)\n",
+    "np.set_printoptions(precision=2)\n",
+    "print(np.concatenate((rfr_y_pred.reshape(len(rfr_y_pred),1), y_test.reshape(len(y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support Vector Regression (SVR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train SVR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regressor = SVR(kernel = 'rbf')\n",
+    "regressor.fit(svr_X_train, svr_y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict test result using SVR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr_y_pred = svr_sc_y.inverse_transform(regressor.predict(svr_sc_X.transform(svr_X_test)))\n",
+    "np.set_printoptions(precision=2)\n",
+    "print(np.concatenate((svr_y_pred.reshape(len(svr_y_pred),1), svr_y_test.reshape(len(svr_y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate Model Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DT:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.922905874177941"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#dT\n",
+    "print(\"DT:\")\n",
+    "r2_score(y_test, dt_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLR:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9325315554761302"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"MLR:\")\n",
+    "r2_score(y_test, mlr_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"PR:\")\n",
+    "r2_score(y_test, pr_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"RFR:\")\n",
+    "r2_score(y_test, rfr_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"SVR:\")\n",
+    "r2_score(svr_y_test, svr_y_pred)"
+   ]
   }
  ],
  "metadata": {
