update rm selection

--- a/ml-project-9-regression-model-selection/ros-rms.ipynb
+++ b/ml-project-9-regression-model-selection/ros-rms.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,19 +115,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decision Tree Regression"
+    "## Models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train DT Model"
+    "### Decision Tree Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train DT Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +143,7 @@
        "DecisionTreeRegressor(random_state=0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,12 +157,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict test result using DT model"
+    "#### Predict test result using DT model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -182,19 +189,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Linear Regression"
+    "### Multiple Linear Regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train MLR Model"
+    "#### Train MLR Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +210,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -261,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poly_reg = PolynomialFeatures(degree = 4)\n",
     "X_poly = poly_reg.fit_transform(X_train)\n",
@@ -280,9 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[433.94 431.23]\n",
+      " [457.9  460.01]\n",
+      " [460.52 461.14]\n",
+      " ...\n",
+      " [469.53 473.26]\n",
+      " [438.27 438.  ]\n",
+      " [461.67 463.28]]\n"
+     ]
+    }
+   ],
    "source": [
     "pr_y_pred = pr_regressor.predict(poly_reg.transform(X_test))\n",
     "np.set_printoptions(precision=2)\n",
@@ -305,9 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(n_estimators=10, random_state=0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "rfr_regressor = RandomForestRegressor(n_estimators = 10, random_state = 0)\n",
@@ -323,9 +366,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[434.05 431.23]\n",
+      " [458.79 460.01]\n",
+      " [463.02 461.14]\n",
+      " ...\n",
+      " [469.48 473.26]\n",
+      " [439.57 438.  ]\n",
+      " [460.38 463.28]]\n"
+     ]
+    }
+   ],
    "source": [
     "rfr_y_pred = rfr_regressor.predict(X_test)\n",
     "np.set_printoptions(precision=2)\n",
@@ -348,9 +405,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rob/projects/ai/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVR()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "regressor = SVR(kernel = 'rbf')\n",
     "regressor.fit(svr_X_train, svr_y_train)"
@@ -365,9 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[434.05 431.23]\n",
+      " [457.94 460.01]\n",
+      " [461.03 461.14]\n",
+      " ...\n",
+      " [470.6  473.26]\n",
+      " [439.42 438.  ]\n",
+      " [460.92 463.28]]\n"
+     ]
+    }
+   ],
    "source": [
     "svr_y_pred = svr_sc_y.inverse_transform(regressor.predict(svr_sc_X.transform(svr_X_test)))\n",
     "np.set_printoptions(precision=2)\n",
@@ -383,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +489,7 @@
        "0.922905874177941"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +518,7 @@
        "0.9325315554761302"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,9 +530,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PR:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9458192831080808"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"PR:\")\n",
     "r2_score(y_test, pr_y_pred)"
@@ -450,9 +558,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RFR:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9615908334363876"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"RFR:\")\n",
     "r2_score(y_test, rfr_y_pred)"
@@ -460,9 +586,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVR:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9480784049986258"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"SVR:\")\n",
     "r2_score(svr_y_test, svr_y_pred)"
