update rm selection 1

--- a/ml-project-9-regression-model-selection/ros-rms.ipynb
+++ b/ml-project-9-regression-model-selection/ros-rms.ipynb
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict test result using MLR model"
+    "#### Predict test result using MLR model"
    ]
   },
   {
@@ -256,14 +256,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Polynomial Regression"
+    "### Polynomial Regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train PR model"
+    "#### Train PR model"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict test result using PR model"
+    "#### Predict test result using PR model"
    ]
   },
   {
@@ -325,14 +325,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest Regession"
+    "### Random Forest Regession"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train RFR Model"
+    "#### Train RFR Model"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict test result using RFR model"
+    "#### Predict test result using RFR model"
    ]
   },
   {
@@ -393,14 +393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Support Vector Regression (SVR)"
+    "### Support Vector Regression (SVR)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train SVR model"
+    "#### Train SVR model"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict test result using SVR model"
+    "#### Predict test result using SVR model"
    ]
   },
   {
