--- a/ml-project-12-nb-classification/python/ros-nb.ipynb
+++ b/ml-project-12-nb-classification/python/ros-nb.ipynb
@@ -1401,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training SVM Model on the Training Set"
+    "## Training Naive Bayes Classification on the Training Set"
    ]
   },
   {
