--- a/ml-project-13-dt-classification/python/ros-dt.ipynb
+++ b/ml-project-13-dt-classification/python/ros-dt.ipynb
@@ -1401,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training SVM Model on the Training Set"
+    "## Training Decision Tree Classification on the Training Set"
    ]
   },
   {
