random forest and text updates

--- a/ml-project-11-svm-classification/python/ros-kernal-svm.ipynb
+++ b/ml-project-11-svm-classification/python/ros-kernal-svm.ipynb
@@ -1663,7 +1663,7 @@
     "for i, j in enumerate(np.unique(y_set)):\n",
     "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label = j)\n",
     "\n",
-    "plt.title('SVM (Training set)')\n",
+    "plt.title('K-SVM (Training set)')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
@@ -1718,7 +1718,7 @@
     "for i, j in enumerate(np.unique(y_set)):\n",
     "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label = j)\n",
     "\n",
-    "plt.title('SVM (Test set)')\n",
+    "plt.title('K-SVM (Test set)')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
