model selection for classification

--- a/ml-project-8-regression-model-selection/ros-rms.ipynb
+++ b/ml-project-8-regression-model-selection/ros-rms.ipynb
@@ -614,11 +614,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0b99e11a9244e56b4301e6eb7d53623d30be6341470bc984ce8fa7ea0618da7e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('.venv': venv)",
+   "display_name": "Python 3.8.10 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +631,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3fcafb2413c669541f99831941a53394b43f3aa639141e36df9bf58e7aa89d43"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
