--- a/ml-project-16-k-means-clustering/python/ros-kmc.ipynb
+++ b/ml-project-16-k-means-clustering/python/ros-kmc.ipynb
@@ -177,10 +177,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "customers with high income spend lots cluster 5 target them the most with new promotions\n",
-    "Don't target cluster 2 because low income are spending too much money\n",
-    "Don't do anything with cluster 3\n",
-    "try target cluster 4 to attract them more"
+    "* Customers with high income spend lots cluster 5 target them the most with new promotions\n",
+    "* Don't target cluster 2 because low income are spending too much money\n",
+    "* Don't do anything with cluster 3\n",
+    "* try target cluster 4 to attract them more"
    ]
   }
  ],
