--- a/ml-project-18-apriori-intuition/python/ros-rbl-apriori.ipynb
+++ b/ml-project-18-apriori-intuition/python/ros-rbl-apriori.ipynb
@@ -294,9 +294,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Left Hand Side</th>\n",
+       "      <th>Right Hand Side</th>\n",
+       "      <th>Support</th>\n",
+       "      <th>Confidence</th>\n",
+       "      <th>Lift</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fromage blanc</td>\n",
+       "      <td>honey</td>\n",
+       "      <td>0.003333</td>\n",
+       "      <td>0.245098</td>\n",
+       "      <td>5.164271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>light cream</td>\n",
+       "      <td>chicken</td>\n",
+       "      <td>0.004533</td>\n",
+       "      <td>0.290598</td>\n",
+       "      <td>4.843951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pasta</td>\n",
+       "      <td>escalope</td>\n",
+       "      <td>0.005866</td>\n",
+       "      <td>0.372881</td>\n",
+       "      <td>4.700812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pasta</td>\n",
+       "      <td>shrimp</td>\n",
+       "      <td>0.005066</td>\n",
+       "      <td>0.322034</td>\n",
+       "      <td>4.506672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>whole wheat pasta</td>\n",
+       "      <td>olive oil</td>\n",
+       "      <td>0.007999</td>\n",
+       "      <td>0.271493</td>\n",
+       "      <td>4.122410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tomato sauce</td>\n",
+       "      <td>ground beef</td>\n",
+       "      <td>0.005333</td>\n",
+       "      <td>0.377358</td>\n",
+       "      <td>3.840659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mushroom cream sauce</td>\n",
+       "      <td>escalope</td>\n",
+       "      <td>0.005733</td>\n",
+       "      <td>0.300699</td>\n",
+       "      <td>3.790833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>herb &amp; pepper</td>\n",
+       "      <td>ground beef</td>\n",
+       "      <td>0.015998</td>\n",
+       "      <td>0.323450</td>\n",
+       "      <td>3.291994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>light cream</td>\n",
+       "      <td>olive oil</td>\n",
+       "      <td>0.003200</td>\n",
+       "      <td>0.205128</td>\n",
+       "      <td>3.114710</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Left Hand Side Right Hand Side   Support  Confidence      Lift\n",
+       "3         fromage blanc           honey  0.003333    0.245098  5.164271\n",
+       "0           light cream         chicken  0.004533    0.290598  4.843951\n",
+       "2                 pasta        escalope  0.005866    0.372881  4.700812\n",
+       "8                 pasta          shrimp  0.005066    0.322034  4.506672\n",
+       "7     whole wheat pasta       olive oil  0.007999    0.271493  4.122410\n",
+       "5          tomato sauce     ground beef  0.005333    0.377358  3.840659\n",
+       "1  mushroom cream sauce        escalope  0.005733    0.300699  3.790833\n",
+       "4         herb & pepper     ground beef  0.015998    0.323450  3.291994\n",
+       "6           light cream       olive oil  0.003200    0.205128  3.114710"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resultsinDataFrame.nlargest(n=10, columns='Lift')"
    ]
