--- a/ml-project-20-rl-ucb/python/ros-rl-ucb.ipynb
+++ b/ml-project-20-rl-ucb/python/ros-rl-ucb.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "#Step 1\n",
-    "N = 1000 #total number of users\n",
+    "N = 1000 #total number of users, #try 500, 1000, or 10,000\n",
     "d = 10 #total number of ads\n",
     "ads_selected = []\n",
     "Ni_n_numbers_of_selections = [0] * d #initialise with 10 zeros\n",
@@ -117,6 +117,13 @@
     "plt.xlabel('Ads')\n",
     "plt.ylabel('# times ad was selected')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "500 is not enough to identify that ad 4 was the best one to run"
    ]
   }
  ],
