--- a/ml-project-22-nlp/python/ros-nlp.ipynb
+++ b/ml-project-22-nlp/python/ros-nlp.ipynb
@@ -457,6 +457,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Accuracy is not enough, look at other performance metrics like Precision (measuring exactness), Recall (measuring completeness) and the F1 Score (compromise between Precision and Recall). Please find below these metrics formulas (TP = # True Positives, TN = # True Negatives, FP = # False Positives, FN = # False Negatives):\n",
+    "\n",
+    "* Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+    "\n",
+    "* Precision = TP / (TP + FP)\n",
+    "\n",
+    "* Recall = TP / (TP + FN)\n",
+    "\n",
+    "* F1 Score = 2 * Precision * Recall / (Precision + Recall)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
