dimension reduction complete

--- a/ml-project-23-dimension-reduction/python/ros-pca.ipynb
+++ b/ml-project-23-dimension-reduction/python/ros-pca.ipynb
@@ -5,6 +5,10 @@
    "metadata": {},
    "source": [
     "# Principal Component Analysis\n",
+    "We use PCA to overcome the curse of dimensionality. We take 17 features from wine dataset and reduce it to 2 features (principal components)\n",
+    "\n",
+    "PCA is an unsupervised dimension reduction technique.\n",
+    "\n",
     "url: https://setosa.io/ev/principal-component-analysis/"
    ]
   },
