updated gitignore and added mabs

--- a/mastering-rl/mrl-01-multi-armed-bandit/mab.ipynb
+++ b/mastering-rl/mrl-01-multi-armed-bandit/mab.ipynb
@@ -478,9 +478,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rlenv2",
+   "display_name": "rl_projects_venv",
    "language": "python",
-   "name": "rlenv2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -492,7 +492,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "506669015457a129652c8351264fc44493ef3c822e57ddebad4727f23755bf65"
+   }
   }
  },
  "nbformat": 4,
