--- a/mastering-rl/mrl-01-multi-armed-bandit/mab.ipynb
+++ b/mastering-rl/mrl-01-multi-armed-bandit/mab.ipynb
@@ -478,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rl_projects_venv",
+   "display_name": "venv_mrl",
    "language": "python",
    "name": "python3"
   },
@@ -496,7 +496,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "506669015457a129652c8351264fc44493ef3c822e57ddebad4727f23755bf65"
+    "hash": "769b22f789755c13fedc77ee9ab6eafea5dd85d7db6675ea59215e213a8aaf2c"
    }
   }
  },
